Added a bunch of new code snippets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,17 @@
 {
 	"cSpell.words": [
+		"Forloop",
 		"Templating",
 		"endcapture",
+		"endcase",
 		"endcomment",
+		"endfor",
+		"endfori",
 		"endic",
-		"endnic"
+		"endifi",
+		"endnic",
+		"endunless",
+		"fori",
+		"rindex"
 	]
 }
