--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -1,10 +1,7 @@
 name: Test Publish
-on:
-  push:
-    branches:
-      - main
+on: [push]
 jobs:
-  test:
+  Test:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,7 +12,7 @@ jobs:
           node-version: '14'
       - run: npm run compile
       - run: tsc -p ./
-  publish:
+  Publish:
     runs-on: windows-latest
     steps:
       - shell: bash
