--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,12 +5,11 @@ on:
 jobs:
   publish:
     runs-on: windows-latest
+    env:
+      VSCE_TOKEN: ${{ secrets.vsce_token }}
     steps:
-      - shell: bash
-        env:
-          VSCE_TOKEN: ${{ secrets.vsce_token }}
       - name: vsce publish
         uses: sigma/vsce-publish-action@v0.0.2
         with:
           # vsce token
-          vsce_token: "$VSCE_TOKEN"
+          vsce_token: "$env:VSCE_TOKEN"
