--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,11 +28,6 @@
 	// Turn off tsc task auto detection since we have the necessary tasks as npm scripts
 	"typescript.tsc.autoDetect": "off",
 	"cSpell.words": [
-		"Forloop",
-		"Linkto",
-		"Rollforward",
-		"Stripnewlines",
-		"Templating",
 		"addnewinputs",
 		"adjustmentbutton",
 		"adjustmenttransaction",
@@ -51,9 +46,16 @@
 		"endnic",
 		"endstripnewlines",
 		"endunless",
+		"fontcolor",
+		"fontsize",
 		"fori",
+		"Forloop",
+		"Linkto",
 		"markdownlint",
 		"rindex",
-		"signmarker"
+		"Rollforward",
+		"signmarker",
+		"Stripnewlines",
+		"Templating"
 	]
 }
