added everything regarding the new html tables in silverfin #7

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,16 @@
 		"addnewinputs",
 		"adjustmentbutton",
 		"adjustmenttransaction",
+		"alignbottom",
+		"aligncenter",
+		"alignleft",
+		"alignright",
+		"aligntop",
 		"changeorientation",
+		"doublelinebottom",
+		"doublelineleft",
+		"doublelineright",
+		"doublelinetop",
 		"endaddnewinputs",
 		"endadjustmentbutton",
 		"endcapture",
@@ -50,17 +59,44 @@
 		"fontsize",
 		"fori",
 		"Forloop",
+		"indentclass",
 		"infotext",
 		"infotextblock",
 		"infotexthover",
 		"infotextinline",
+		"linebottom",
+		"lineleft",
+		"lineright",
+		"linetop",
 		"Linkto",
 		"markdownlint",
 		"rindex",
 		"Rollforward",
 		"signmarker",
 		"Stripnewlines",
+		"tbody",
 		"Templating",
+		"thead",
+		"usralignbottom",
+		"usraligncenter",
+		"usralignleft",
+		"usralignright",
+		"usraligntop",
+		"usrdoublelinebottom",
+		"usrdoublelineleft",
+		"usrdoublelineright",
+		"usrdoublelinetop",
+		"usrindent",
+		"usrlinebottom",
+		"usrlineleft",
+		"usrlineright",
+		"usrlinetop",
+		"usrnoleftpadding",
+		"usrrepeatedheader",
+		"usrvaligncenter",
+		"usrwidth",
+		"valign",
+		"valigncenter",
 		"warningtext",
 		"warningtextblock",
 		"warningtexthover",
