--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,9 +70,11 @@
 		"linetop",
 		"Linkto",
 		"markdownlint",
+		"næøå",
 		"rindex",
 		"Rollforward",
 		"signmarker",
+		"Silverfins",
 		"Stripnewlines",
 		"tbody",
 		"Templating",
