--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Syntax Highlighting for Silverfin Templating Language - Liquid",
 	"version": "0.2.8",
 	"publisher": "NicklasLydersen",
-	"icon": "resources/icon.png",
+	"icon": "resources/logo.png",
 	"repository": {
 		"url": "https://github.com/Nicklas185105/Silverfin-Liquid"
 	},
