fixing github workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,6 @@ jobs:
         with:
           node-version: '14'
       - run: npm install
+      - run: npm install -g typescript
       - run: npm run compile
       - run: tsc -p ./
